[gd_scene load_steps=9 format=3 uid="uid://n1fpmt6arblg"]

[ext_resource type="Script" path="res://scripts/book.gd" id="1_4k430"]
[ext_resource type="PackedScene" uid="uid://x6p11jjbry4h" path="res://KayKit_DungeonRemastered_1.1_FREE/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/box_small.gltf" id="2_h65xa"]
[ext_resource type="PackedScene" uid="uid://byr82rapea4qq" path="res://KayKit_DungeonRemastered_1.1_FREE/KayKit_DungeonRemastered_1.1_FREE/Assets/gltf/coin.gltf" id="3_clcd3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_uaant"]
radius = 0.92682

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q14dn"]
bg_color = Color(0.427451, 0.0745098, 0.105882, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k62in"]
bg_color = Color(0.560784, 0.333333, 0.313726, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkpsp"]
bg_color = Color(0.976471, 0.529412, 0.521569, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dj0lf"]
bg_color = Color(0.427451, 0.0745098, 0.105882, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5

[node name="book" type="Node3D"]
script = ExtResource("1_4k430")

[node name="box_small2" parent="." instance=ExtResource("2_h65xa")]
transform = Transform3D(1.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0)

[node name="coin2" parent="box_small2" instance=ExtResource("3_clcd3")]
transform = Transform3D(0.666667, 0, 0, 0, 2, 0, 0, 0, 1, -0.0340463, 0.846952, 0.00669336)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.474777, 0)
shape = SubResource("SphereShape3D_uaant")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel4" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 320.0
offset_top = 512.0
offset_right = 832.0
offset_bottom = 624.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q14dn")

[node name="Label" type="Label" parent="Control/Panel4"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 513.0
offset_bottom = 139.0
text = "You now have the book of swiftness, to use it and dash you 
must walk at any direction and right click"
horizontal_alignment = 1

[node name="button5" type="Button" parent="Control/Panel4"]
layout_mode = 0
offset_left = 192.0
offset_top = 70.0
offset_right = 320.0
offset_bottom = 101.0
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_k62in")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_rkpsp")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_dj0lf")
text = "OK"

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="pressed" from="Control/Panel4/button5" to="." method="_on_button_5_pressed"]
